[gd_scene load_steps=9 format=2]

[ext_resource path="res://Src/Levels/BaseLevel.gd" type="Script" id=1]
[ext_resource path="res://Src/Skybox/NewSkybox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Src/Player/Player.tscn" type="PackedScene" id=14]
[ext_resource path="res://Assets/Tileset/WallTileset.tres" type="TileSet" id=17]
[ext_resource path="res://Assets/Tileset/RoomsTileset.tres" type="TileSet" id=21]
[ext_resource path="res://Src/ExtractionZone/ExtractionZone.tscn" type="PackedScene" id=46]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 112, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 32 )

[node name="LevelEmpty" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "Affaire 2: Your boss wants you to infiltrate the affaires house, taser him and bring the body to the car."
}
level_lightning = 2
level_nation_type = 2
level_objectives = NodePath("../Level16/NPCS/Civillian")
playCarCloseSound = false

[node name="NewSkybox" parent="." instance=ExtResource( 4 )]

[node name="Ground" type="Node2D" parent="."]
position = Vector2( 704, 256 )

[node name="Right" type="StaticBody2D" parent="Ground"]
position = Vector2( 48, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/Right"]
position = Vector2( 32, 0 )
shape = SubResource( 1 )

[node name="Left" type="StaticBody2D" parent="Ground"]
position = Vector2( -624, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/Left"]
position = Vector2( 32, 0 )
shape = SubResource( 1 )

[node name="SpriteWalls" type="Node2D" parent="."]

[node name="BackgroundDecorations" type="Node2D" parent="."]

[node name="BgWalls" type="TileMap" parent="."]
tile_set = ExtResource( 17 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 32
occluder_light_mask = 3
format = 1

[node name="Rooms" type="TileMap" parent="."]
light_mask = 3
tile_set = ExtResource( 21 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 32
occluder_light_mask = 3
format = 1

[node name="Walls" type="TileMap" parent="."]
tile_set = ExtResource( 17 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 32
occluder_light_mask = 3
format = 1

[node name="LevelObjects" type="Node2D" parent="."]

[node name="Decorations" type="Node2D" parent="LevelObjects"]

[node name="Objects" type="Node2D" parent="LevelObjects"]

[node name="Doors" type="Node2D" parent="LevelObjects"]

[node name="Staircases" type="Node2D" parent="LevelObjects"]

[node name="Cameras" type="Node2D" parent="LevelObjects"]
position = Vector2( 8, 0 )

[node name="Lights" type="Node2D" parent="LevelObjects"]
__meta__ = {
"_edit_lock_": true
}

[node name="ExtractionZone" parent="LevelObjects" instance=ExtResource( 46 )]
position = Vector2( 80, 256 )
next_level = 6
nextSecretaryInteractionCounter = 6

[node name="Player" parent="." instance=ExtResource( 14 )]
position = Vector2( 136, 256 )
z_index = 50

[node name="MinigameHolder" type="CanvasLayer" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( -104, 256 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 152, -32 )
shape = SubResource( 2 )

[node name="NPCS" type="Node2D" parent="."]

[node name="Foreground" type="Node2D" parent="."]
z_index = 51
